#1 Revise all links to JVM 12